# Streaming

./: .env.sample  .gitignore  LICENSE  README.md  bench_out.txt  cols.txt  implementation_plan.md  implementation_plan2.md  implementation_plan3.md  implementation_plan4.md  implementation_plan5.md  main.py  new_implementation_plan.md  pyproject.toml  review_proyecto_4_streaming.md  revision_proyecto_4_streaming.md  run_tests.ps1  spire.bat  tarjeta_repositorio.md  walkthrough-modelos.md  walkthrough.md  walkthrough_3.md  walkthrough_4.md
artifacts/: README.md
artifacts/exports/: modelo_7_twotowers.onnx.data
artifacts/mappings/: ncf_item2idx.json  ncf_user2idx.json
artifacts/monitoring/: informe_rendimiento.html
artifacts/weights/: modelo_5_metricas.json
logs/: recommendations.jsonl
src/: __init__.py
src/api/: database.py  etl.py  main_api.py
src/api/routers/: admin.py  auth.py  ratings.py  recommendations.py  serendipia.py
src/config/: rules_cleaning.yaml  settings.py
src/data/: Enlaces.md
src/data/clean/: links_limpio.csv  trakt_movies_limpio.csv  trakt_shows_limpio.csv
src/data/raw/movielens/: README_ES.md
src/data/raw/tmdb/series/: README.md  catalogo_series_tmdb.csv
src/data/raw/trakt/movies/: trakt_movies.csv
src/data/raw/trakt/shows/: trakt_shows.csv
src/data/scripts_sql/: create_database.sql  create_serendipity_cache.sql  create_user_ratings.sql  migration_user_v2.sql  migration_user_v3.sql  modificaciones.sql  setup_completo.sql
src/frontend/: app_ui.py  vista_admin.py  vista_usuario.py
src/frontend/pages/: 1_Administrador.py  2_Usuario.py
src/metrics/: coverage.py  hitrate.py  mrr.py  ndcg.py  precision.py  protocols.py  recall.py
src/models/: implementation_plan_for_models.md  modelo_1_SVD.py  modelo_2_knn+cs.py  modelo_3_wide&deep.py
src/models/jj/: modelo_1_SVD.py  modelo_2.5_knn_msd.py  modelo_2_knn+cs.py  modelo_3_wide&deep.py  modelo_3_wnd.onnx.data  modelo_4_bcs_tf-idf.py  modelo_5_implicit.py  modelo_5_lightfm.py  modelo_6_ncf.py  modelo_7_twotowers.py
src/models/nil/: bench_out.txt  benchmark_modelos.py  evaluar_modelo_final.py  train_modelo_ncf.py
src/models/tx/: README.md  model_SVD_CS.py  model_SVD_KNN_RERANK.py  model_SVD_KNN_RERANK_con_generos.py  model_SVD_KNN_sin_rerank.py  model_SVD_latente_catalogo_completo.py
src/networks/: tmdb_api_down.py
src/networks/dl/: rn_mlp.py  two_towers_net.py
src/pipelines/: evaluation_pipeline.py
src/schemas/: recommendation.py  schemas.py
src/scripts/: data_analisis.py  data_cleaning.py  data_unification.py  eda.py  generar_eda_charts.py  generar_informe_rendimiento.py  import_ml_users_from_ratings.py  populate_genres.py  readme_import_ml_users_from_ratings.md  run_migration_v2.py  tmdb_api_down.py  trakt_tendencias_api_down.py  transform_data.py  upload_data.py  upload_models.py
src/serendipia/: __init__.py  actualizar_cache_cron.py  calculadora_serendipia.py
src/tracking/: logger.py  performance.py
src/utils/: 2_data_cleaning.py  Primer_resultado_evaulacion.md  download_data.py  download_models.py  evaluacion_ranking.py  exportar_onnx.py  historial_metricas.csv  metricas_ranking.csv  metricas_ranking_old_2.csv  metricas_ranking_old_3.csv  registrar_metricas.py
static/eda/: metricas.json
test/: conftest.py  test_api.py  test_calculadora_serendipia.py  test_etl.py  test_evaluation_pipeline.py  test_logger.py  test_metrics.py  test_registrar_metricas.py  test_schemas.py  test_serendipia.py
test/test_utils/: test_data_loaders.py
